# ai-ocr-pipeline

./: .gitignore  .pre-commit-config.yaml  README.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  playwright.config.js  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: build_release_assets.py  generate_text_map.py  reconstruct_layout.py  repair_hidden_pth.py  sync_and_repair.sh  visualize_layout.py
src/ai_ocr_pipeline/: __init__.py  __main__.py  cli.py  models.py  overlay.py  pdf.py  template.py
src/ai_ocr_pipeline/_vendored/deskew_ht/: __init__.py  deskew.py  skew_detect.py
src/ai_ocr_pipeline/llm/: __init__.py  lmstudio.py
src/ai_ocr_pipeline/ocr/: __init__.py  direct.py  engine.py  scoring.py
src/ai_ocr_pipeline/preprocess/: __init__.py  deskew.py  image.py
tests/: test_cli.py  test_generate_text_map.py  test_layout_scripts.py  test_lmstudio.py  test_ocr_direct.py  test_overlay.py  test_pdf.py  test_template.py
tools/: template_editor.html  template_editor_en.html  template_editor_jp.html
